RESOLVED FIXED113803
[Mac] [WK2] Crashes in NetworkProcess when canceling loads
https://bugs.webkit.org/show_bug.cgi?id=113803
Summary [Mac] [WK2] Crashes in NetworkProcess when canceling loads
Alexey Proskuryakov
Reported 2013-04-02 10:51:01 PDT
When we cancel an NSURLConnection, we release its delegate (and delegate proxy). But there may already be delegate calls scheduled on operation queue, or even already executing. <rdar://problem/13551119>
Attachments
proposed fix (8.96 KB, patch)
2013-04-02 11:02 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2013-04-02 11:02:58 PDT
Created attachment 196184 [details] proposed fix
Darin Adler
Comment 2 2013-04-02 11:06:31 PDT
Comment on attachment 196184 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=196184&action=review > Source/WebCore/platform/network/mac/ResourceHandleMac.mm:-175 > - d->m_proxy.adoptNS(wkCreateNSURLConnectionDelegateProxy()); Will we also remove this WebKitSystemInterface function?
Alexey Proskuryakov
Comment 3 2013-04-02 11:35:24 PDT
Committed <http://trac.webkit.org/changeset/147476>. > Will we also remove this WebKitSystemInterface function? Good idea, I didn't think of these. Will make a separate patch.
Note You need to log in before you can comment on or make changes to this bug.