Source/WebCore/platform/network/ResourceHandleInternal.h
@@ -161,7 +161,6 @@ namespace WebCore {
 #if PLATFORM(MAC) && !USE(CFNETWORK)
         RetainPtr<NSURLConnection> m_connection;
         RetainPtr<id> m_delegate;
-        RetainPtr<id> m_proxy;
 #endif
 #if PLATFORM(MAC)
         bool m_startWhenScheduled;
